--- a/savchuk/style.css
+++ b/savchuk/style.css
@@ -5,34 +5,30 @@ body {
 }
 
 .container {
-  width: 50vw;
+  width: 40vw;
   height: 70vh;
-  display: inline-block;
+  display: flex;
   border: solid 2px black;
+  flex-direction: column;
 }
 
 .container .first {
-  display: inline-block;
+  display: block;
+  float: inline-end;
   width: 100%;
   height: 14%;
   background-color: orange;
 }
 
 .first .white {
+  margin-top: auto;
+  float: left;
   width: 30%;
-  vertical-align: middle;
   height: 50%;
-  display: inline-block;
+  display: block;
   background-color: white;
   margin-left: 25px;
-}
-
-.first::before {
-  content: "";
-  display: inline-block;
-  min-height: inherit;
-  height: 100%;
-  vertical-align: middle;
+  margin-top: 17px;
 }
 
 .middle {
@@ -42,22 +38,26 @@ body {
 }
 
 .middle .second {
-  display: inline-block;
+  display: block;
+  float: left;
   width: 25%;
   height: 100%;
   background-color: blue;
-  margin-right: 100px;
+  margin-right: 50px;
 }
 
 .middle .white {
-  display: inline-block;
+  display: block;
   margin-bottom: 25px;
   height: 80%;
   width: 50%;
+  float: right;
+  margin-top: 25px;
+  margin-right: 50px;
 }
 
 .middle .white .red {
-  display: inline-block;
+  display: block;
   width: 100%;
   height: 10%;
   background-color: red;
@@ -65,7 +65,8 @@ body {
 }
 
 .middle .white .third {
-  display: inline-block;
+  display: block;
+  float: left;
   width: 50%;
   height: 80%;
   border: 2px solid black;
@@ -73,7 +74,8 @@ body {
 
 .middle .white .fourth {
   margin-left: 20px;
-  display: inline-block;
+  display: block;
+  float: right;
   width: 40%;
   height: 80%;
   background-color: blue;
