--- a/savchuk/style.css
+++ b/savchuk/style.css
@@ -1,82 +1,75 @@
-body {
-  display: flex;
-  justify-content: center;
-  width: 100vw;
-}
-
 .container {
-  width: 40vw;
-  height: 70vh;
-  display: flex;
-  border: solid 2px black;
-  flex-direction: column;
+    margin: 1em auto 0;
+    width: 40vw;
+    height: 70vh;
+    display: flex;
+    border: solid 2px black;
+    flex-direction: column;
 }
 
 .container .first {
-  display: block;
-  float: inline-end;
-  width: 100%;
-  height: 14%;
-  background-color: orange;
+    display: block;
+    width: 100%;
+    height: 14%;
+    background-color: orange;
 }
 
 .first .white {
-  margin-top: auto;
-  float: left;
-  width: 30%;
-  height: 50%;
-  display: block;
-  background-color: white;
-  margin-left: 25px;
-  margin-top: 17px;
+    float: left;
+    width: 30%;
+    height: 50%;
+    display: block;
+    background-color: white;
+    margin-left: 25px;
+    margin-top: 17px;
 }
 
 .middle {
-  width: 100%;
-  height: 70%;
-  display: inline-block;
+    width: 100%;
+    height: 70%;
+    display: inline-block;
 }
 
 .middle .second {
-  display: block;
-  float: left;
-  width: 25%;
-  height: 100%;
-  background-color: blue;
-  margin-right: 50px;
+    display: block;
+    float: left;
+    width: 25%;
+    height: 100%;
+    background-color: blue;
+    margin-right: 50px;
 }
 
 .middle .white {
-  display: block;
-  margin-bottom: 25px;
-  height: 80%;
-  width: 50%;
-  float: right;
-  margin-top: 25px;
-  margin-right: 50px;
+    display: block;
+    margin-bottom: 25px;
+    height: 80%;
+    width: 50%;
+    float: right;
+    margin-top: 25px;
+    margin-right: 50px;
 }
 
 .middle .white .red {
-  display: block;
-  width: 100%;
-  height: 10%;
-  background-color: red;
-  margin-bottom: 10%;
+    display: block;
+    width: 100%;
+    height: 10%;
+    background-color: red;
+    margin-bottom: 10%;
 }
 
 .middle .white .third {
-  display: block;
-  float: left;
-  width: 50%;
-  height: 80%;
-  border: 2px solid black;
+    display: block;
+    float: left;
+    width: 50%;
+    height: 80%;
+    border: 2px solid black;
 }
 
 .middle .white .fourth {
-  margin-left: 20px;
-  display: block;
-  float: right;
-  width: 40%;
-  height: 80%;
-  background-color: blue;
+    margin-left: 20px;
+    display: block;
+    float: right;
+    width: 40%;
+    height: 80%;
+    background-color: blue;
 }
