--- a/style.css
+++ b/style.css
@@ -41,19 +41,19 @@ nav {
     padding: 0 1em;
 }
 
-nav ul {
+nav > ul {
     margin: 0;
     padding: 0;
 }
 
 /* clearfix */
-nav ul::after {
+nav > ul::after {
     content: '';
     display: block;
     clear: both;
 }
 
-nav ul li {
+nav > ul > li {
     display: block;
     float: left;
 }
@@ -73,7 +73,7 @@ nav ul li {
     bottom: -1px;
 }
 
-nav ul li a {
+nav > ul > li > a {
     text-decoration: none;
     padding: 1em 0.5em;
     display: block;
